--- a/assets/styles/components/news.css
+++ b/assets/styles/components/news.css
@@ -4,9 +4,9 @@
 .news-block {
     position: absolute;
     width: 208px;
-    height: 752px;
-    left: 1040px;
-    top: 0;
+    height: 606px;
+    left: 816px;
+    top: 0px;
     background: transparent;
     z-index: 10;
     border-radius: 0;
