--- a/assets/styles/components/chat.css
+++ b/assets/styles/components/chat.css
@@ -117,9 +117,11 @@
     box-sizing: border-box;
     position: relative;
     filter: brightness(1);
+    transition: filter 200ms ease;
 }
+
 .chat-item:hover {
-    filter: brightness(var(--item-hover-brightness));
+    filter: brightness(1.15);
 }
 
 /* Chat avatar */
