--- a/assets/styles/components/settings.css
+++ b/assets/styles/components/settings.css
@@ -77,7 +77,8 @@
     background: #252525;
     border-radius: var(--block-radius);
     cursor: pointer;
-    transition: filter 0.25s;
+    filter: brightness(1);
+    transition: filter 200ms ease;
     z-index: 999;
 }
 
