--- a/assets/styles/auth.css
+++ b/assets/styles/auth.css
@@ -1,5 +1,3 @@
-/* Font faces are now embedded via get_auth_css_with_fonts() */
-
 * {
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
@@ -35,7 +33,8 @@ button:focus-visible {
     flex-direction: row;
     justify-content: center;
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 24px);
+    margin-top: 24px;
     max-width: 1280px;
 }
 .content {
