--- a/assets/styles/pages/main.css
+++ b/assets/styles/pages/main.css
@@ -4,17 +4,17 @@
 @import url("./base.css");
 
 /* Animation definitions */
-@import url("./animations.css");
+@import url("../other/animations.css");
 
 /* Component styles */
-@import url("./components/logo.css");
-@import url("./components/navigation.css");
-@import url("./components/chat.css");
-@import url("./components/home.css");
-@import url("./components/news.css");
-@import url("./components/debug.css");
-@import url("./components/context_menu.css");
-@import url("./components/version_selector.css");
+@import url("../components/logo.css");
+@import url("../components/navigation.css");
+@import url("../components/chat.css");
+@import url("../components/home.css");
+@import url("../components/news.css");
+@import url("../components/debug.css");
+@import url("../components/context_menu.css");
+@import url("../components/version_selector.css");
 
 /* Component-specific text selection rules */
 .nav-text,
