--- a/assets/styles/components/home.css
+++ b/assets/styles/components/home.css
@@ -101,7 +101,8 @@
     top: 26px;
 }
 .instances-title {
-    top: 338px;
+    top: 26px;
+    /* top: 338px; */
 }
 
 .last-connections-divider,
@@ -117,7 +118,8 @@
     width: 452px;
 }
 .instances-divider {
-    top: 353px;
+    /* top: 353px; */
+    top: 42px;
     left: 170px;
     width: 534px;
 }
@@ -206,7 +208,8 @@
 
 .instances-container {
     position: absolute;
-    top: 391px;
+    /* top: 391px; */
+    top: 80px;
     left: 48px;
     display: grid;
     grid-template-columns: repeat(7, var(--instance-size));
